<resources>
    <string name="app_name">waste</string>
    <string name="login">Login</string>
    <string name="app_title">W M S</string>
    <string name="enter_name">Enter Name</string>
    <string name="password">Password</string>
    <string name="exit">Exit</string>
    <string name="admin">Admin</string>
    <string name="location">Location</string>
    <string name="grievance">Grievance</string>
    <string name="area_details">Area Details</string>
    <string name="taluk_id">Taluk ID:</string>
    <string name="area">Area</string>
    <string name="area_id">Area ID:</string>
    <string name="area_name">Area Name:</string>
    <string name="enter_area">Enter Area ID</string>
    <string name="insert">Insert</string>
    <string name="enter">Enter</string>
</resources>
