<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainUserOutput">

    <TextView android:text = "@string/area_details"
        android:layout_width="wrap_content"
        android:layout_height = "wrap_content"
        android:id = "@+id/textview"
        android:textSize = "35sp"
        android:layout_alignParentTop = "true"
        android:layout_centerHorizontal = "true" />

    <TextView android:text = "@string/taluk_id" android:layout_width="wrap_content"
        android:layout_height = "wrap_content"
        android:id = "@+id/textview1"
        android:layout_marginTop="60dp"
        android:textSize = "25sp"
        android:layout_below="@+id/textview" />

    <TextView android:text = "@string/area_id" android:layout_width="wrap_content"
        android:layout_height = "wrap_content"
        android:id = "@+id/textview2"
        android:layout_marginTop="60dp"
        android:textSize = "25sp"
        android:layout_below="@+id/textview1" />

    <TextView android:text = "@string/area_name" android:layout_width="wrap_content"
        android:layout_height = "wrap_content"
        android:id = "@+id/textview3"
        android:layout_marginTop="60dp"
        android:textSize = "25sp"
        android:layout_below="@+id/textview2" />

    <EditText android:layout_width="wrap_content"
        android:inputType="number"
        android:layout_height = "wrap_content"
        android:id = "@+id/textview4"
        android:layout_marginTop="60dp"
        android:textSize = "20sp"
        android:layout_below="@+id/textview"
        android:layout_centerHorizontal = "true" />

    <EditText android:layout_width="wrap_content"
        android:layout_height = "wrap_content"
        android:inputType="number"
        android:id = "@+id/textview5"
        android:layout_marginTop="60dp"
        android:textSize = "20sp"
        android:layout_below="@+id/textview1"
        android:layout_centerHorizontal = "true" />

    <EditText android:layout_width="wrap_content"
        android:layout_height = "wrap_content"
        android:inputType="text

"
        android:id = "@+id/textview6"
        android:layout_marginTop="60dp"
        android:textSize = "20sp"
        android:layout_below="@+id/textview2"
        android:layout_centerHorizontal = "true" />

    <Button
        android:id="@+id/buttonArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal = "true"
        android:layout_marginBottom="40dp"
        android:text="@string/insert"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>