<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainUser">

    <TextView android:text = "@string/area" android:layout_width="wrap_content"
        android:layout_height = "wrap_content"
        android:id = "@+id/textview1"
        android:textSize = "35sp"
        android:layout_alignParentTop = "true"
        android:layout_centerHorizontal = "true" />

    <EditText
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:inputType="number"
        android:id = "@+id/editText"
        android:hint = "@string/enter_area"
        android:focusable = "true"
        android:textColorHighlight = "#ff7eff15"
        android:textColorHint = "#ffff25e6"
        android:layout_marginTop = "200dp"
        android:layout_below = "@+id/textview1"
        android:layout_alignParentLeft = "true"
        android:layout_alignParentStart = "true"
        android:layout_alignParentRight = "true"
        android:layout_alignParentEnd = "true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal = "true"/>

</RelativeLayout>