<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainAdmin">

    <TextView android:text = "@string/admin" android:layout_width="wrap_content"
        android:layout_height = "wrap_content"
        android:id = "@+id/textview1"
        android:textSize = "35sp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentTop = "true"
        android:layout_centerHorizontal = "true" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal = "true"
        android:layout_marginBottom="20dp"
        android:text="Area"
        android:layout_below = "@+id/textview1"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal = "true"
        android:layout_below = "@+id/button3"/>

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grievance"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal = "true"
        android:layout_below = "@+id/button4"/>

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Town"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal = "true"
        android:layout_below = "@+id/button5"/>

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Taluk"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal = "true"
        android:layout_below = "@+id/button6"/>

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Suggestion"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal = "true"
        android:layout_below = "@+id/button7"/>

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="User Mode"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal = "true"
        android:layout_below = "@+id/button8"/>

</RelativeLayout>